[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Esteban Rodriguez <https://github.com/esteban-alo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.4.0"
coverage = "^7.4.4"
isort = "^5.13.2"
mypy = "^1.9.0"
pyflakes = "^3.2.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
