[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Esteban Rodriguez <https://github.com/esteban-alo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.4.2"
coverage = "^7.5.3"
isort = "^5.13.2"
mypy = "^1.10.0"
pyflakes = "^3.2.0"
pylint = "^3.2.2"
pytest = "^8.2.1"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
