[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Esteban Rodriguez <https://github.com/esteban-alo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.16.5"
flask = "^3.1.2"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.43"
psycopg = {extras = ["binary"], version = "^3.2.10"}

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
coverage = "^7.10.6"
isort = "^5.13.2"
mypy = "^1.18.2"
pyflakes = "^3.4.0"
pylint = "^3.3.8"
pytest = "^8.4.2"
ruff = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
